7 august classexamples